fix(textarea): scrollbars are visible with overflow

--- a/core/src/components/textarea/textarea.scss
+++ b/core/src/components/textarea/textarea.scss
@@ -124,8 +124,6 @@
   resize: none;
   appearance: none;
 
-  overflow: hidden;
-
   &::placeholder {
     @include padding(0);
 
@@ -190,4 +188,8 @@
   transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 
   opacity: 1;
+}
+
+:host([auto-grow]) .native-textarea {
+  overflow: hidden;
 }
